apply prettier to the whole codebase

--- a/client/parcel-entry.html
+++ b/client/parcel-entry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <script src="src/pinboard.main.tsx"></script>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <script src="src/pinboard.main.tsx"></script>
+  </head>
 </html>
