Preselecting pinboards! - Preselect a pinboard based on the presence of a composer ID - Add functionality to local test client to demonstrate preselect and switching - Update schema to include querying pinboard by composer ID - Update workflow lambda to optionally return single stub by composer ID - Some small styling tweaks to widget and scroll behaviour
Co-authored-by: Tom Richards <tom.richards@guardian.co.uk>

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>PinBoard</title>
-    <script src="https://pinboard.local.dev-gutools.co.uk/pinboard.loader.js"></script>
-    <script>
-      setTimeout(
-        () => {
-          document.body.appendChild(
-            document.createElement("add-to-pinboard-button")
-          );
-        },
-        1000 // 1 second delay
-      );
-    </script>
-  </head>
 
-  <body>
-    <h3>button added initially</h3>
-    <add-to-pinboard-button data-hello="world"></add-to-pinboard-button>
+<head>
+  <meta charset="UTF-8" />
+  <title>PinBoard</title>
+  <script src="https://pinboard.local.dev-gutools.co.uk/pinboard.loader.js"></script>
+  <script>
+    setTimeout(
+      () => {
+        document.body.appendChild(
+          document.createElement("add-to-pinboard-button")
+        );
 
-    <h3>button added after 1sec delay</h3>
-    <!--
+      },
+      1000 // 1 second delay
+    )
+    setTimeout(
+      () => {
+        document.getElementById("initial-preselected-pinboard").remove();
+        const preSelectPinboardElement = document.createElement("preselect-pinboard");
+        preSelectPinboardElement.dataset.composerId = "54f2d2fee4b011581586e710"
+        document.body.appendChild(
+          preSelectPinboardElement
+        );
+      },
+      5000 // 5 second delay
+    )
+  </script>
+</head>
+
+<body>
+  <h3>Hidden element to preselect pinboard with composer ID 54f39ac9e4b09d0edf204cb0</h3>
+  <preselect-pinboard data-composer-id="54f39ac9e4b09d0edf204cb0" id="initial-preselected-pinboard">
+  </preselect-pinboard>
+
+  <h3>Hidden element added after 5 seconds to preselect pinboard with composer ID 54f2d2fee4b011581586e710</h3>
+
+  <h3>button added initially</h3>
+  <add-to-pinboard-button data-hello="world"></add-to-pinboard-button>
+  <h3>button added after 1 second</h3>
+  <!--
             the setTimeout in the <script> further up will add an element here after 1 second,
             which the PinBoard library will detect and convert to a button
         -->
-  </body>
+
+
+</body>
+
 </html>
