rename <add-to-pinboard-button /> element to <pinboard-add-button /> (to effectively namespace it)

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -9,7 +9,7 @@
     setTimeout(
       () => {
         document.body.appendChild(
-          document.createElement("add-to-pinboard-button")
+          document.createElement("pinboard-add-button")
         );
 
       },
@@ -37,7 +37,7 @@
   <h3>Hidden element added after 5 seconds to preselect pinboard with composer ID 54f2d2fee4b011581586e710</h3>
 
   <h3>button added initially</h3>
-  <add-to-pinboard-button data-hello="world"></add-to-pinboard-button>
+  <pinboard-add-button data-hello="world"></pinboard-add-button>
   <h3>button added after 1 second</h3>
   <!--
             the setTimeout in the <script> further up will add an element here after 1 second,
