--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -11,6 +11,10 @@
     <button id="btn-add-preselection">Add pinboard pre-selection</button>
     <button id="btn-remove-preselection">Remove pinboard pre-selection</button>
 
+    <h3>Pinboard preselection (for invalid/untracked composer ID)</h3>
+    <button id="btn-add-invalid-preselection">Add pinboard INVALID pre-selection</button>
+    <button id="btn-remove-invalid-preselection">Remove pinboard INVALID pre-selection</button>
+
     <h3>button added initially</h3>
     <pinboard-add-button data-hello="world"></pinboard-add-button>
     <h3>button added after 1 second</h3>
@@ -42,6 +46,21 @@
       .getElementById("btn-remove-preselection")
       .addEventListener("click", () => {
         preSelectPinboardElement.remove();
+      });
+
+    const preSelectInvalidPinboardElement = document.createElement(
+      "pinboard-preselect"
+    );
+    preSelectInvalidPinboardElement.dataset.composerId = "INVALID";
+    document
+      .getElementById("btn-add-invalid-preselection")
+      .addEventListener("click", () => {
+        document.body.appendChild(preSelectInvalidPinboardElement);
+      });
+    document
+      .getElementById("btn-remove-invalid-preselection")
+      .addEventListener("click", () => {
+        preSelectInvalidPinboardElement.remove();
       });
   </script>
 </html>
