fixing prettier check step in ci script
Co-authored-by: Tom Richards <tom.richards@guardian.co.uk>

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -12,8 +12,12 @@
     <button id="btn-remove-preselection">Remove pinboard pre-selection</button>
 
     <h3>Pinboard preselection (for invalid/untracked composer ID)</h3>
-    <button id="btn-add-invalid-preselection">Add pinboard INVALID pre-selection</button>
-    <button id="btn-remove-invalid-preselection">Remove pinboard INVALID pre-selection</button>
+    <button id="btn-add-invalid-preselection">
+      Add pinboard INVALID pre-selection
+    </button>
+    <button id="btn-remove-invalid-preselection">
+      Remove pinboard INVALID pre-selection
+    </button>
 
     <h3>button added initially</h3>
     <pinboard-add-button data-hello="world"></pinboard-add-button>
