--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -20,7 +20,10 @@
     </button>
 
     <h3>button added initially</h3>
-    <pinboard-add-button data-hello="world"></pinboard-add-button>
+    <pinboard-add-button
+      data-grid-crop-thumbnail="https://public.media.local.dev-gutools.co.uk/b0be818e91887d7f619449e88ce9dec62405f5ea/500_0_4000_5000/400.jpg"
+      data-type="grid-crop"
+    ></pinboard-add-button>
     <h3>button added after 1 second</h3>
     <!--
             the setTimeout in the <script> further up will add an element here after 1 second,
@@ -31,7 +34,9 @@
     setTimeout(
       () => {
         const delayedAddButton = document.createElement("pinboard-add-button");
-        delayedAddButton.dataset.foo = "bar";
+        delayedAddButton.dataset.type = "grid-crop";
+        delayedAddButton.dataset.gridCropThumbnail =
+          "https://public.media.local.dev-gutools.co.uk/b0be818e91887d7f619449e88ce9dec62405f5ea/500_0_4000_5000/400.jpg";
         document.body.appendChild(delayedAddButton);
       },
       1000 // 1 second delay
