add drop shadow to the grid thumbnails

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -21,7 +21,7 @@
 
     <h3>button added initially</h3>
     <pinboard-add-button
-      data-grid-crop-thumbnail="https://public.media.local.dev-gutools.co.uk/b0be818e91887d7f619449e88ce9dec62405f5ea/500_0_4000_5000/400.jpg"
+      data-grid-crop-thumbnail="https://s3-eu-west-1.amazonaws.com/media-origin.test.dev-guim.co.uk/24733ea386c7fcb37496c55cc86e8f1468b9dfcf/817_0_1866_2333/400.jpg"
       data-type="grid-crop"
     ></pinboard-add-button>
     <h3>button added after 1 second</h3>
@@ -36,7 +36,7 @@
         const delayedAddButton = document.createElement("pinboard-add-button");
         delayedAddButton.dataset.type = "grid-crop";
         delayedAddButton.dataset.gridCropThumbnail =
-          "https://public.media.local.dev-gutools.co.uk/b0be818e91887d7f619449e88ce9dec62405f5ea/500_0_4000_5000/400.jpg";
+          "https://s3-eu-west-1.amazonaws.com/media-origin.test.dev-guim.co.uk/24733ea386c7fcb37496c55cc86e8f1468b9dfcf/817_0_1866_2333/400.jpg";
         document.body.appendChild(delayedAddButton);
       },
       1000 // 1 second delay
