build composer URL properly
Co-authored-by: Tom Richards <tom.richards@guardian.co.uk>

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+    <a href="?expandPinboard=true"
+      >Expand pinboard via query param <code>?expandPinboard=true</code></a
+    >
     <h3>Pinboard pre-selection</h3>
     <ul>
       <h4>
