WIP support 'asset-usage' tags in host application and allow 'ordering changes by Imaging team'

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -63,6 +63,17 @@
         and Pinboard detecting that and still taking over the element
       </p>
     </ul>
+
+    <h3>Asset Usage</h3>
+    <img
+      src="https://s3-eu-west-1.amazonaws.com/media-origin.test.dev-guim.co.uk/24733ea386c7fcb37496c55cc86e8f1468b9dfcf/817_0_1866_2333/400.jpg"
+      height="150"
+    />
+    <asset-usage
+      data-thumbnail="https://s3-eu-west-1.amazonaws.com/media-origin.test.dev-guim.co.uk/24733ea386c7fcb37496c55cc86e8f1468b9dfcf/817_0_1866_2333/400.jpg"
+      data-asset-id="24733ea386c7fcb37496c55cc86e8f1468b9dfcf"
+      data-usage-location="LOCAL PLAYGROUND"
+    />
   </body>
   <script>
     setTimeout(
