Send push notifications from `notifications-lambda`
Co-Authored-By: Tom Richards <19289579+twrichards@users.noreply.github.com>

--- a/client/src/push-notifications/index.html
+++ b/client/src/push-notifications/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Pinboard Push Notifications</title>
+    <title>Pinboard Push Notification Preferences</title>
   </head>
   <body>
     <button id="toggleNotificationsButton">Toggle desktop notifications</button>
