push-notifications: use webpack-html-plugin to generate html file

--- a/client/src/push-notifications/index.html
+++ b/client/src/push-notifications/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <button id="toggleNotificationsButton">Toggle desktop notifications</button>
-    <script src="registerServiceWorker.ts"></script>
+    <!-- <script> added by webpack-html-plugin -->
   </body>
 </html>
