Allow Agate Sans, import to playground

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <title>PinBoard</title>
     <script src="https://pinboard.local.dev-gutools.co.uk/pinboard.loader.js"></script>
+    <style>
+      @font-face {
+        font-family: "Guardian Agate Sans";
+        src: url("https://interactive.guim.co.uk/fonts/guss-webfonts/GuardianAgateSans1Web/GuardianAgateSans1Web-Regular.woff2")
+          format("woff2");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+    </style>
   </head>
 
   <body>
