implementing panel design

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -13,6 +13,14 @@
         font-style: normal;
         font-display: swap;
       }
+      @font-face {
+        font-family: "Guardian Agate Sans";
+        src: url("https://interactive.guim.co.uk/fonts/guss-webfonts/GuardianAgateSans1Web/GuardianAgateSans1Web-Bold.woff2")
+          format("woff2");
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+      }
     </style>
   </head>
 
