Implement chat window designs
Some elements in the design have not been implemented as the
functionality they would demonstrate has not been implemented:

 - "'asset' was added" messages
 - Typing cues
 - Colouring URLs in messages
 - Highlighting unread mentions of 'me'

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -101,7 +101,7 @@
         delayedAddButton.dataset.sourceType = "crop";
         delayedAddButton.dataset.thumbnail =
           "https://s3-eu-west-1.amazonaws.com/media-origin.test.dev-guim.co.uk/24733ea386c7fcb37496c55cc86e8f1468b9dfcf/817_0_1866_2333/400.jpg";
-        delayedAddButton.dataset.dataEmbeddableUrl =
+        delayedAddButton.dataset.embeddableUrl =
           "https://media.test.dev-gutools.co.uk/images/24733ea386c7fcb37496c55cc86e8f1468b9dfcf?crop=817_0_1866_2333";
         document.getElementById("button_section").appendChild(delayedAddButton);
       },
