ensure clicking a desktop notification opens in correct environment AND fix/simplify opening a pinboard via query param

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -30,14 +30,10 @@
     >
     <h3>Pinboard pre-selection</h3>
     <ul>
-      <h4>
-        via query param (for composer ID <code>54f2d2fee4b011581586e710</code>)
-      </h4>
+      <h4>via query param (for workflow/pinboard ID <code>14748</code>)</h4>
       <ul>
         <li>
-          <a href="?pinboardComposerID=54f2d2fee4b011581586e710"
-            >?pinboardComposerID=54f2d2fee4b011581586e710</a
-          >
+          <a href="?pinboardId=14748">?pinboardId=14748</a>
         </li>
         <li>
           <a href="?"><em>REMOVE QUERY PARAM</em></a>
