scroll to item by ID (including for notification links)

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -36,6 +36,11 @@
           <a href="?pinboardId=14748">?pinboardId=14748</a>
         </li>
         <li>
+          <a href="?pinboardId=14748&pinboardItemId=1667"
+            >?pinboardId=14748&pinboardItemId=1667</a
+          >
+        </li>
+        <li>
           <a href="?"><em>REMOVE QUERY PARAM</em></a>
         </li>
       </ul>
