upgrade `prettier`, because A) it's best practice and B) we want to use nice new features of TypeScript such as `satisfies` keyword (see https://devblogs.microsoft.com/typescript/announcing-typescript-4-9/#satisfies) which `prettier` didn't like

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -108,9 +108,8 @@
       1000 // 1 second delay
     );
 
-    const preSelectPinboardElement = document.createElement(
-      "pinboard-preselect"
-    );
+    const preSelectPinboardElement =
+      document.createElement("pinboard-preselect");
     preSelectPinboardElement.dataset.composerId = "54f2d2fee4b011581586e710";
     document
       .getElementById("btn-add-preselection")
@@ -123,9 +122,8 @@
         preSelectPinboardElement.remove();
       });
 
-    const preSelectInvalidPinboardElement = document.createElement(
-      "pinboard-preselect"
-    );
+    const preSelectInvalidPinboardElement =
+      document.createElement("pinboard-preselect");
     preSelectInvalidPinboardElement.dataset.composerId = "INVALID";
     document
       .getElementById("btn-add-invalid-preselection")
