--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -82,6 +82,15 @@
         data-api-url="https://api.media.test.dev-gutools.co.uk/images?q=flag%20%20~%22australia%22%20%23xyz%20country:%22United%20Kingdom%22&length=1&orderBy=-uploadTime"
         data-embeddable-url="https://media.test.dev-gutools.co.uk/search?query=flag%20%20~%22australia%22%20%23xyz%20country:%22United%20Kingdom%22"
       ></asset-handle>
+      <br />
+      <code>mam-video</code>
+      <asset-handle
+        data-source="mam"
+        data-source-type="video"
+        data-thumbnail="https://s3-eu-west-1.amazonaws.com/media-origin.test.dev-guim.co.uk/3a9912b476c90c3f66becae89128adb6894c6331/1393_1066_2607_1467/500.jpg"
+        data-external-url="https://www.youtube.com/embed/smK7tmo5lco?showinfo=0&rel=0"
+        data-embeddable-url="https://video.code.dev-gutools.co.uk/videos/e0924f34-f4f3-482c-90c5-01c1aee3f18a"
+      ></asset-handle>
       <h4>presented after 1 second</h4>
       <!--
               the setTimeout in the <script> further up will add an element here after 1 second,
