--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -10,23 +10,25 @@
     <a href="?expandPinboard=true"
       >Expand pinboard via query param <code>?expandPinboard=true</code></a
     >
-    <h4>Open Pinboard via query param (for workflow/pinboard ID <code>65299</code>)</h4>
-      <ul>
-        <li>
-          <a href="?pinboardId=65299">?pinboardId=65299</a>
-        </li>
-        <li>
-          <a href="?pinboardId=65299&pinboardItemId=2885"
-            >?pinboardId=65299&pinboardItemId=2885</a
-          >
-        </li>
-        <li>
-          <a href="?"><em>REMOVE QUERY PARAM</em></a>
-        </li>
-      </ul>
+    <h4>
+      Open Pinboard via query param (for workflow/pinboard ID
+      <code>65299</code>)
+    </h4>
+    <ul>
+      <li>
+        <a href="?pinboardId=65299">?pinboardId=65299</a>
+      </li>
+      <li>
+        <a href="?pinboardId=65299&pinboardItemId=2885"
+          >?pinboardId=65299&pinboardItemId=2885</a
+        >
+      </li>
+      <li>
+        <a href="?"><em>REMOVE QUERY PARAM</em></a>
+      </li>
+    </ul>
     <h3>Pinboard pre-selection</h3>
     <ul>
-
       <h4>
         via hidden element (for composer ID
         <code>649975868f08c7d8da8802ff</code>)
