WIP: Display starred messages in dedicated component (which will display at the top of Composer articles)
Co-Authored-By: Tom Richards <19289579+twrichards@users.noreply.github.com>

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -38,7 +38,7 @@
         Remove pinboard pre-selection
       </button>
 
-      <h5>Starred messages</h5>
+      <h5>Starred messages (requires pinboard pre-selection)</h5>
       <pinboard-starred-messages></pinboard-starred-messages>
 
       <h4>via hidden element (for invalid/untracked composer ID)</h4>
