--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -39,7 +39,9 @@
       </button>
 
       <h5>Starred messages (requires pinboard pre-selection)</h5>
-      <pinboard-starred-messages></pinboard-starred-messages>
+      <div style="max-width: 710px">
+        <pinboard-starred-messages></pinboard-starred-messages>
+      </div>
 
       <h4>via hidden element (for invalid/untracked composer ID)</h4>
       <button id="btn-add-invalid-preselection">
