fronts integration PLUS 'suggest alternate crops' buttons (for composer trail image, see https://github.com/guardian/flexible-content/pull/4984)

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -56,6 +56,13 @@
       <button id="btn-unset-unread-notifications-bubble">Unset</button>
     </div>
 
+    <h3>Fronts Integration</h3>
+    <pinboard-article-button
+      data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+    ></pinboard-article-button>
+    <pinboard-suggest-alternate-crops
+      data-media-id="d6518ba44eb272830b779e4ed6356482007d4536"
+    ></pinboard-suggest-alternate-crops>
     <h3><code>Add to 📌</code> button</h3>
     <ul id="button_section">
       <h4>present initially</h4>
