display draggable thumbs when the `<pinboard-article-button>` has a `data-with-draggable-thumbs-of-ratio` attribute

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -57,12 +57,32 @@
     </div>
 
     <h3>Fronts Integration</h3>
-    <pinboard-article-button
-      data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
-    ></pinboard-article-button>
+
+    Composer Buttons etc. (under trail image in furniture)<br />
     <pinboard-suggest-alternate-crops
       data-media-id="d6518ba44eb272830b779e4ed6356482007d4536"
     ></pinboard-suggest-alternate-crops>
+
+    <div style="max-width: 180px">
+      Fronts Clipboard Card:<br />
+      <pinboard-article-button
+        data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+      ></pinboard-article-button>
+    </div>
+    Fronts Article Cards [Collapsed]:<br />
+    <pinboard-article-button
+      data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+    ></pinboard-article-button>
+    <br />
+    Fronts Article Cards [Expanded]<br />
+    <pinboard-article-button
+      data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+      data-with-draggable-thumbs-of-ratio="5:4"
+    ></pinboard-article-button>
+    <pinboard-article-button
+      data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+      data-with-draggable-thumbs-of-ratio="4:5"
+    ></pinboard-article-button>
     <h3><code>Add to 📌</code> button</h3>
     <ul id="button_section">
       <h4>present initially</h4>
