display count of already suggested crops beneath `Suggest an alternate...` buttons

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -59,9 +59,11 @@
     <h3>Fronts Integration</h3>
 
     Composer Buttons etc. (under trail image in furniture)<br />
-    <pinboard-suggest-alternate-crops
-      data-media-id="d6518ba44eb272830b779e4ed6356482007d4536"
-    ></pinboard-suggest-alternate-crops>
+    <div style="width: 195px; border: 1px dashed gray">
+      <pinboard-suggest-alternate-crops
+        data-media-id="d6518ba44eb272830b779e4ed6356482007d4536"
+      ></pinboard-suggest-alternate-crops>
+    </div>
 
     <div style="max-width: 180px">
       Fronts Clipboard Card:<br />
