Stash: send snippet to pinboard

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -7,6 +7,32 @@
   </head>
 
   <body>
+    <hr />
+    <p>not inside target</p>
+    <h2>Not inside target</h2>
+    <div
+      data-pinboard-selection-target
+      style="padding: 20px; background-color: aliceblue"
+    >
+      <h3>Pinboard selection target</h3>
+      <p>
+        This is a target for the Pinboard library to render the selection
+        interface into. It will be hidden by the library when not in use. This
+        is a target for the Pinboard library to render the selection interface
+        into. It will be hidden by the library when not in use. This is a target
+        for the Pinboard library to render the selection interface into. It will
+        be hidden by the library when not in use. This is a target for the
+        Pinboard library to render the selection interface into. It will be
+        hidden by the library when not in use. This is a target for the Pinboard
+        library to render the selection interface into. It will be hidden by the
+        library when not in use. This is a target for the Pinboard library to
+        render the selection interface into. It will be hidden by the library
+        when not in use.
+      </p>
+    </div>
+    <p>not inside target</p>
+
+    <hr />
     <a href="?expandPinboard=true"
       >Expand pinboard via query param <code>?expandPinboard=true</code></a
     >
