--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -59,10 +59,14 @@
     <h3>Fronts Integration</h3>
 
     Composer Buttons etc. (under trail image in furniture)<br />
-    <div style="width: 195px; border: 1px dashed gray">
-      <pinboard-suggest-alternate-crops
-        data-media-id="d6518ba44eb272830b779e4ed6356482007d4536"
-      ></pinboard-suggest-alternate-crops>
+    <div
+      style="background: #f6f6f6; padding-left: 420px; display: inline-block"
+    >
+      <div style="width: 195px">
+        <pinboard-suggest-alternate-crops
+          data-media-id="d6518ba44eb272830b779e4ed6356482007d4536"
+        ></pinboard-suggest-alternate-crops>
+      </div>
     </div>
 
     <div style="max-width: 180px">
