refactor/simplify `peekAtPinboard` functionality, and use in the fronts integration to avoid polluting users' `My Pinboards` lists

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <title>PinBoard</title>
     <script src="https://pinboard.local.dev-gutools.co.uk/pinboard.loader.js"></script>
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 100vh;
+        column-gap: 10px;
+      }
+      h3,
+      h4 {
+        margin-top: 10px;
+        margin-bottom: 5px;
+      }
+    </style>
   </head>
 
   <body>
@@ -58,7 +72,8 @@
 
     <h3>Fronts Integration</h3>
 
-    Composer Buttons etc. (under trail image in furniture)<br />
+    <h4>Composer Buttons etc. (under trail image in furniture)</h4>
+    <em>Requires preselected pinboard (like in composer)</em>
     <div
       style="background: #f6f6f6; padding-left: 420px; display: inline-block"
     >
@@ -70,23 +85,23 @@
     </div>
 
     <div style="max-width: 180px">
-      Fronts Clipboard Card:<br />
+      <h4>Fronts Clipboard Card:</h4>
       <pinboard-article-button
-        data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+        data-url-path="uk-news/2024/oct/21/whats-my-scene-by-the-hoodoo-gurus-"
       ></pinboard-article-button>
     </div>
-    Fronts Article Cards [Collapsed]:<br />
+    <h4>Fronts Article Cards [Collapsed]:</h4>
     <pinboard-article-button
-      data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+      data-url-path="uk-news/2024/oct/21/whats-my-scene-by-the-hoodoo-gurus-"
     ></pinboard-article-button>
     <br />
-    Fronts Article Cards [Expanded]<br />
+    <h4>Fronts Article Cards [Expanded]</h4>
     <pinboard-article-button
-      data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+      data-url-path="uk-news/2024/oct/21/whats-my-scene-by-the-hoodoo-gurus-"
       data-with-draggable-thumbs-of-ratio="5:4"
     ></pinboard-article-button>
     <pinboard-article-button
-      data-url-path="football/2024/oct/08/tottenham-ryan-mason-anderlecht-manager-job"
+      data-url-path="uk-news/2024/oct/21/whats-my-scene-by-the-hoodoo-gurus-"
       data-with-draggable-thumbs-of-ratio="4:5"
     ></pinboard-article-button>
     <h3><code>Add to 📌</code> button</h3>
