if the `SuggestAlternateCrops` component appears within the left 350px of the screen (e.g. furniture of interactive pieces) then display the hover tooltip of existing suggested crops on the right

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -74,10 +74,13 @@
 
     <h4>Composer Buttons etc. (under trail image in furniture)</h4>
     <em>Requires preselected pinboard (like in composer)</em>
-    <div
-      style="background: #f6f6f6; padding-left: 420px; display: inline-block"
-    >
-      <div style="width: 195px">
+    <div style="background: #f6f6f6; display: inline-block">
+      <div style="padding-left: 420px; width: 195px">
+        <pinboard-suggest-alternate-crops
+          data-media-id="d6518ba44eb272830b779e4ed6356482007d4536"
+        ></pinboard-suggest-alternate-crops>
+      </div>
+      <div>
         <pinboard-suggest-alternate-crops
           data-media-id="d6518ba44eb272830b779e4ed6356482007d4536"
         ></pinboard-suggest-alternate-crops>
