WIP add new `notifications-ui` subdirectory of `notifications-lambda` containing the beginnings of a Svelte app which will be the new shared/centralised notifications UI, served by the notifications lambda (incl. loader script to be added to many other tools for showing an iframe for notifications settings if applicable)

--- a/bootstrapping-lambda/local/index.html
+++ b/bootstrapping-lambda/local/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>PinBoard</title>
     <script src="https://pinboard.local.dev-gutools.co.uk/pinboard.loader.js"></script>
+    <script src="https://staff-notifications.local.dev-gutools.co.uk/loader.js"></script>
     <style>
       body {
         display: flex;
